[package]
name = "file_serve_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = {version = "1", features = ["full"]}
tower-http = { version = "0.3", features = ["fs"] }
tower = { version = "0.4", features = ["full"]}
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-body = "0.4"
chrono = "0.4"
percent-encoding = "2.1"
